# dataseeker

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
examples/: example1.py  requirements.txt
src/: check_options.py  controller.py  request.py
src/dataseeker_luanramos/: entity.py  main.py  requirements.txt
src/dataseeker_luanramos/tests/: main_test.py
src/enum/: enum_request_type.py
src/handlers/: cache_handler.py
src/util/: mongodb.py
