[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataseeker_luanramos"
version = "0.0.2"
authors = [
  { name="Luan Ramos", email="luan.toronto@outlook.com" },
]
description = "A library that helps to create and understand API calls and their responses."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/luancaius/dataseeker"
"Bug Tracker" = "https://github.com/luancaius/dataseeker/issues"